tests/workflows/tests/snapshots/policy_extensions__policy_status_json_reports_configured_extension.snap
---
source: tests/workflows/tests/policy_extensions.rs
expression: json
---
{
  "enabled": true,
  "enabled_count": 1,
  "enforce_count": 1,
  "report_count": 0,
  "no_failures": true,
  "has_warnings": false,
  "diagnostics": [
    {
      "code": "policy_extensions_configured",
      "severity": "pass",
      "detail": "1 enabled (1 enforce, 0 report)"
    }
  ],
  "success": true
}
