tests/workflows/tests/snapshots/policy_extensions__policy_test_json_rejects_dist_tag.snap
---
source: tests/workflows/tests/policy_extensions.rs
expression: json
---
{
  "schema_version": 1,
  "success": false,
  "error": "invalid version: latest: Failed to parse version.",
  "error_code": "invalid_version"
}
